# UsbUacTest

./: CMakeLists.txt  UacDevice.cpp  UacDevice.h  UsbDevice.cpp  UsbDevice.h  Utils.cpp  Utils.h  data.pcm  main.cpp
